Fix ToS scrolling off-screen

--- a/src/global.sass
+++ b/src/global.sass
@@ -177,7 +177,7 @@ button
 	font-size: 0.9rem
 	padding: 0 1rem
 .scrollable
-	margin-top: 4rem
+	margin-top: 1rem
 	overflow: scroll
 	height: 27rem
 
